--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -377,7 +377,7 @@ Ein geeignetes Werkzeug hierfür ist die \emph{Principal Component Analysis} (si
  \paragraph{Bedingungen an implizit enthaltene Merkmale}
  % Bedingungen an abgeleitet Werte
  Nun möchte man vielleicht Bedingungen an das zu generierende Skelett stellen, die nicht schon genau so in den erhobenen Daten repräsentiert sind. 
- Bedingungen an Dimensionen, die gar nicht erhoben wurden, können  entweder, unabhängig von der PCA, in den Ersetzungsregeln erzwungen werden, wie \zb die Anzahl der Flossen, oder sie müssen in die Erhebung eingefügt werden.
+ Bedingungen an Dimensionen, die gar nicht erhoben wurden, können  entweder, unabhängig von der PCA, in den Ersetzungsregeln oder den Parametern der Grammatik (siehe Abschnitt \ref{section:grammar}) erzwungen werden, wie \zb die Anzahl der Flossen, oder sie müssen in die Erhebung eingefügt werden.
  
  Bedingungen, die schon implizit in den erhobenen Daten enthalten sind, sind beispielsweise die Schwanz- oder Halslänge. Um an sie Bedingungen stellen zu können, könnte man ebenfalls eine zusätzliche Dimension einfügen. Sie kann einfach aus den schon bestehenden Dimensionen errechnet werden. Dabei wäre aber das Problem, dass nur die Dimensionalität der Daten erhöht wird, nicht aber die eingegebenen Informationen. Es wären also mehr Eingabebeispiele nötig, nur dafür, dass die PCA eine offensichtliche Korrelation der Dimensionen erkennt.
  
