First version of summary

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -110,7 +110,7 @@
 }
 
 @online{alembic,
- title = {Algembic},
+ title = {Alembic},
  url = {http://www.alembic.io/},
  urldate = {2020-05-27}
 }
@@ -484,8 +484,8 @@
  address = {München}
 }
 
-@article{MouseVertebrae, 
- author = {SHINOHARA, Harumichi},
+@article{MouseVertebrae,
+ author = {Shinohara, Harumichi},
  year = {1999},
  month = {06},
  pages = {17-31},
